--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,17 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
+    "jwt-simple": "^0.5.6",
     "moment": "^2.30.1",
     "mongoose": "^8.5.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "winston": "^3.13.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0"
   }
 }
